styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, 'Raleway', Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  /* background-color: azure; */
  background-color: rgb(250, 250, 250);
  /* color: black; */
}

h1, h2, h3, h4 {
  font-family: -apple-system, 'Raleway', Roboto, Oxygen,
  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-weight: 500;
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 2.25rem;
}

h3 {
  font-size: 1.5rem;
}

ol {
  display: block;
  list-style-type: decimal;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  padding-inline-start: 40px;
}

ul {
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  padding-inline-start: 40px;
}

p {
  display: block;
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

blockquote {
  font-size: 1.125rem;
  text-align: justify;
}

.pl-zero {
  padding-inline-start: 0;
}

/* Article Image and caption Style */

figure {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 30px 0;
}

figcaption {
  font-size: 0.85em;
  margin-top: 10px;
}

.textAreaContainer > p > img {
  margin: 30px 0;
}

/* <-- End --> */

.bannerTitle {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1400px;
  margin: auto;
}

.bannerTitle > h1 {
  align-self: flex-start;
  font-weight: bold;
  font-size: 3rem;
}

.uk-container > p {
  text-align: justify;
  line-height: 1.55;
}

a {
  color: #1e87f0;
  text-decoration: none;
}

a:link { text-decoration: none; }
a:visited { text-decoration: none; }
a:hover { text-decoration: none; }
a:active { text-decoration: none; }

* {
  box-sizing: border-box;
}

.nav-style {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.nav-sticky {
  background-color: rgba(255, 255, 255, 0.9);
  position: -webkit-sticky;
  position: sticky;
  -webkit-backdrop-filter: saturate(175%) blur(8px);
  backdrop-filter: saturate(175%) blur(8px);
  top: 0;
  z-index: 5;
}

.nav-link {
  padding: 28px 0;
  transition: blue .3s;
}

.nav-link a{
  color: inherit;
}

.nav-link-hover:hover {
  color: black;
}

.wrapper-nav {
  display: inline-block;
  padding-left: 12px;
  padding-right: 12px;
  cursor: pointer;
}

._large-nav-container {
  max-width: 1188px;
  margin-right: auto;
  margin-left: auto;
  padding-right: 18px;
  padding-left: 18px;
}

.nav-shadow {
  box-shadow: 0 5px 10px rgb(0 0 0 / 0.2);
}

.banner {
  height: 50vh;
  width: auto;
}
.banner h1 {
  font-weight: 700;
  text-align: center;
  font-size: 3.5rem;
}

.hero-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding-left: 10%;
  padding-top: 10%;
  height: 700px;
}

.hero-title {
  transform: translateX(-4px);
  font-size: 4.3rem !important;
  text-shadow: 1px 1px 3px #272626;
}

.hero-subtext {
  margin-top: 0;
  font-size: 1.4rem;
  margin-right: 50%;
  text-shadow: 1px 1px 3px #272626;
}

.logo-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: black;
}

.logo-container:hover {
  color: black;
}

.logo {
  font-family: 'Abril Fatface', cursive;
  margin: 2px 0 0 0;
  font-size: 42px;
}

.logo-sub-text {
  font-style: italic;
  font-size: 14px;
  padding-bottom: 10px;
}

.topic-body {
  min-height: 60vh;
  margin: 0 15% 0 15%;
  padding-top: 2rem;
  padding-bottom: 3rem;
}

.ul-list-style {
  list-style-type: none;
}

.contentTitleBlur {
  -webkit-backdrop-filter: saturate(175%) blur(8px);
  backdrop-filter: saturate(175%) blur(10px);
  text-shadow: 3px 4px 3px #272626;
  padding: 0.5rem 1.3rem;
  border-radius: 15px;
}

.indexTitleContainer {
  display: flex;
  width: 100%;
  flex-direction: row;
  align-items: baseline;
  justify-content: space-between;
  padding: 0 1rem;
}

.indexTitleContainer a{
  flex-direction: row;
  justify-content: flex-end;
}

.homeLink {
  display: flex;
  position: absolute;
  top: 7rem;
}

.articleLink {
  display: flex;
  position: relative;
  right: 10px;
  padding-block-end: 20px;
}

.articleSection {
  width: 100%;
  padding: 5rem 0px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: white;
}

.answerSection {
  width: 100%;
  padding: 5rem 0px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: rgb(250, 250, 250);
}

.answerContentFlex {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.textAreaContainer {
  max-width: 750px;
  font-size: 1.125rem;
  padding-top: 30px;
}

.aboutUsBody{
  max-width: 750px;
  padding-top: 3rem;
  padding-bottom: 3rem;
}
.aboutUsBody p {
  text-align: justify;
}

.navAskButton {
  display: block;
  cursor: pointer;
  border: none;
  background: #fc446d;
  padding: 0.5em 1.5em;
  border-radius: .28571429rem;
  color: white;
  font-weight: 500;
  font-size: 1.1rem;
  margin: 0 12px;
  transition: all .1s ease;
}

.navAskButton:hover,
.navAskButton:active {
  background-color: #fc2857;
}

.search-container {
  visibility: visible;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  padding: 9px;
}

.search-body {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 3rem;
  min-height: 55vh;
}

.search-content {
  max-width: 900px;
  width: 100%;
  margin: 3rem auto;
}

.search-bar {
  position: relative;
}

.search-bar > svg {
  position: absolute; 
  z-index: 6;
  top: 16px;
  left: 10px;
}

.search-text-input {
  width: 100%;
  height: 3rem;
  padding: 0 15px;
  font-family: inherit;
  font-size: 1rem;
  font-weight: 400;
}

.modal-container {
  display: none;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  padding: 9px;
}

.modal-menu {
  border-radius: 4px;
  display: flex;
  align-items: center;
  flex-direction: column;
  background-color: white;
  box-shadow: rgb(0 0 0 / 5%) 0px 0px 0px 1px, rgb(0 0 0 / 15%) 0px 5px 25px 0px, rgb(0 0 0 / 5%) 0px 3px 3px 0px;
  z-index: 2;
}

.search-menu {
  flex-direction: row;
  flex-wrap: wrap;
  align-items: flex-start;
  overflow-y: scroll;
  height: 98vh;
  z-index: 5;
}

.search-button {
  background: none;
  border: none;
  right: 0px;
  position: absolute;
  padding: 0 1rem;
  height: 100%;
  font-family: inherit;
}

.hamburger-menu {
  visibility: hidden;
}

.mobile-menu-section {
  display: flex;
  flex-direction: row;
  align-items: center; 
}

.mobile-search-icon {
  padding: 0 0.5rem;
  margin: 0 0.5rem;
  color: black;
}

.close-icon {
  cursor: pointer;
  position: absolute;
  right: 0;
  top: 0;
  line-height: 1;
  font-size: 1.5rem;
  font-weight: 600;
  padding: 24px 26px;
}

.listContentStyle {
  padding: 3px 0;
}

.endNote {
  font-size: 0.925rem;
  word-break: break-word;
}

/* Media Queries */
@media only screen and (max-width: 905px) {
  .logo {
    font-size: 2rem;
  }

  .logo-sub-text {
    font-size: 12px;
  }

  .nav-style {
    font-size: 14px;
  }

  .nav-style > a {
    font-size: 14px;
  }
}

@media only screen and (max-width: 850px) {
  .nav-links {
    display: none;
  }

  .hero-subtext {
    margin-right: 25%;
  }

  .hamburger-menu {
    visibility: visible;
  }

  .bannerTitle > h1 {
    font-size: 3rem !important;
  }
}

@media only screen and (max-width: 480px) {
  .hero-subtext {
    margin-right: 0;
  }
  
  .hero-title {
    font-size: 4rem !important;
  } 

  #heroButton1 {    
    align-self: center;
    margin-top: 15% !important;
  }

  .bannerTitle > h1 {
    font-size: 2.2rem !important;
  }
}

@media only screen and (max-width: 430px) {
  .hero-title {
    font-size: 3.3rem !important;
  } 
}

